# prompthub

./: .gitignore  .mcp.json  .npmrc.template  AGENTS-backup.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  TODOS.md  llm.txt  mcp.json  notes  prompthub-kill.zsh  prompthub.code-workspace  update-documentation-proposal.md
.github/: labeler.yml  (+3 more)
app/: .claude  .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/.devcontainer/: devcontainer.json  docker-compose.yml
app/cli/: __init__.py  __main__.py  diagnostics.py  discovery.py  generator.py  installer.py  main.py  models.py  profiles.py  setup.py  validator.py
app/configs/: README.md  api-keys.json  api-keys.json.example  claude-desktop-config.json.example  cloud-models.json  enhancement-rules.json  logrotate-macos.conf  logrotate.conf  mcp-servers-keyring.json.example  mcp-servers.json  mcp-servers.json.examples  openterminal.example.json  openwebui-config.json.example  perplexity-mcp.json  raycast-mcp-servers.json.example  vscode-settings.json.example
app/docs/: AWESOME-COPILOT-RESOURCES.md  DOCUMENTATION-INDEX.md  OLLAMA-OPENAI-API.md  README.md
app/docs/api/: README.md  enhancement.md  openapi.yaml
app/docs/architecture/: ADR-001-stdio-transport.md  ADR-002-circuit-breaker.md  ADR-003-per-client-enhancement.md  ADR-004-modular-monolith.md  ADR-005-async-first.md  ADR-006-enhancement-timeout.md  ADR-007-cloud-fallback.md  ADR-008-task-specific-models.md  ADR-009-orchestrator-agent.md  README.md  keyring-vs-security-cli.md  (+1 more)
app/router/: audit.py  audit_integrity.py  keyring_manager.py  main.py  security_alerts.py
app/scripts/: README.md  manage-keys.py  test.sh
app/templates/: dashboard.html
app/tests/: conftest.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_cloud_fallback.py  test_endpoints.py  test_enhancement.py  test_mcp_gateway.py  test_memory.py  test_openai_compat.py  test_persistent_cache.py  test_privacy_level.py  test_routing.py
(+645 files in other folders)
